Fix: The permalink button on Safari was too large

--- a/puppetplays-web/components/Work/workSummary.module.scss
+++ b/puppetplays-web/components/Work/workSummary.module.scss
@@ -112,6 +112,7 @@
 
   button {
     flex: 1 1 auto;
+    width: 24px;
     min-width: 24px;
     height: 24px;
     border-radius: 12px;
